--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    aoeuaoeu
+    <title>
+      Fate Dice Roller
+    </title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="icon.png" />
+    <meta charset="utf-8" />
+
+    <script type="module" src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <button class="do-it">Roll Dice!</button>
+    <div class="output"></div>
+
+    <footer>
+      Fate™ is a trademark of Evil Hat Productions, LLC. The Powered by Fate
+      logo is © Evil Hat Productions, LLC and is used with permission.
+    </footer>
+  </body>
 </html>
